Add decoding of auto-neg capabilites in inverse (wrong) order as proposed in: https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=1455#c32

svn path=/trunk/; revision=28680